k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-log-api
spec:
  type: ClusterIP
  selector:
    app: workout-log-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
